[package]
name = "ibbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.26"
nom = "7.1.3"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.5", features = ["codec"] }
